k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-app
  labels:
    app.kubernetes.io/managed-by: terraform
    environment: local
